--- a/Code/STM32/embedded_CNN_PoC_V-0-1/embedded_CNN_PoC_V-0-1.ioc
+++ b/Code/STM32/embedded_CNN_PoC_V-0-1/embedded_CNN_PoC_V-0-1.ioc
@@ -8,17 +8,18 @@ KeepUserPlacement=false
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=CORTEX_M33_NS
-Mcu.IP1=GPDMA1
-Mcu.IP10=USART2
-Mcu.IP2=I2C1
-Mcu.IP3=ICACHE
-Mcu.IP4=NVIC
-Mcu.IP5=PWR
-Mcu.IP6=RCC
-Mcu.IP7=SAI1
-Mcu.IP8=SYS
-Mcu.IP9=THREADX
-Mcu.IPNb=11
+Mcu.IP1=CRC
+Mcu.IP10=THREADX
+Mcu.IP11=USART2
+Mcu.IP2=GPDMA1
+Mcu.IP3=I2C1
+Mcu.IP4=ICACHE
+Mcu.IP5=NVIC
+Mcu.IP6=PWR
+Mcu.IP7=RCC
+Mcu.IP8=SAI1
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
@@ -27,15 +28,17 @@ Mcu.Pin10=PG13
 Mcu.Pin11=PG14
 Mcu.Pin12=PB3 (JTDO/TRACESWO)
 Mcu.Pin13=PB7
-Mcu.Pin14=VP_GPDMA1_VS_GPDMACH15
-Mcu.Pin15=VP_ICACHE_VS_ICACHE
-Mcu.Pin16=VP_PWR_VS_DBSignals
-Mcu.Pin17=VP_PWR_VS_SECSignals
-Mcu.Pin18=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin19=VP_SYS_VS_tim17
+Mcu.Pin14=VP_CRC_VS_CRC
+Mcu.Pin15=VP_GPDMA1_VS_GPDMACH15
+Mcu.Pin16=VP_ICACHE_VS_ICACHE
+Mcu.Pin17=VP_PWR_VS_DBSignals
+Mcu.Pin18=VP_PWR_VS_SECSignals
+Mcu.Pin19=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
 Mcu.Pin2=PE6
-Mcu.Pin20=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin21=VP_THREADX_VS_RTOSJjThreadXJjLow_Power_Support
+Mcu.Pin20=VP_SYS_VS_tim17
+Mcu.Pin21=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin22=VP_THREADX_VS_RTOSJjThreadXJjLow_Power_Support
+Mcu.Pin23=VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_7.1.0
 Mcu.Pin3=PC13
 Mcu.Pin4=PH0-OSC_IN (PH0)
 Mcu.Pin5=PH1-OSC_OUT (PH1)
@@ -43,8 +46,9 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PG2
 Mcu.Pin9=PC7
-Mcu.PinsNb=22
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=24
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AI.7.1.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
 MxCube.Version=6.3.0
@@ -116,7 +120,7 @@ ProjectManager.DeviceId=STM32U575ZITxQ
 ProjectManager.FirmwarePackage=STM32Cube FW_U5 V1.0.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x800
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -127,54 +131,92 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=embedded_CNN_PoC_V-0-1.ioc
 ProjectManager.ProjectName=embedded_CNN_PoC_V-0-1
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+RCC.ADCCLockSelection=RCC_ADCDACCLKSOURCE_PLL2
+RCC.ADCFreq_Value=160000000
+RCC.ADF1Freq_Value=160000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1Freq_Value=160000000
+RCC.APB1TimFreq_Value=160000000
+RCC.APB2Freq_Value=160000000
+RCC.APB2TimFreq_Value=160000000
+RCC.APB3Freq_Value=160000000
 RCC.CK48Freq_Value=48000000
 RCC.CRSFreq_Value=48000000
+RCC.CortexFreq_Value=160000000
 RCC.DACCLockSelectionVirtual=RCC_DAC1CLKSOURCE_LSI
 RCC.DACCLockSelectionVirtualString=RCC_DAC1CLKSOURCE_LSI
 RCC.DACFreq_Value=32000
-RCC.EPOD_VALUE=4000000
-RCC.FDCANFreq_Value=258000000
+RCC.EPOD_VALUE=48000000
+RCC.FCLKCortexFreq_Value=160000000
+RCC.FDCANFreq_Value=80000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=CK48Freq_Value,CRSFreq_Value,DACCLockSelectionVirtual,DACCLockSelectionVirtualString,DACFreq_Value,EPOD_VALUE,FDCANFreq_Value,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MSI_VALUE,PLL2P,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.I2C1Freq_Value=160000000
+RCC.I2C2Freq_Value=160000000
+RCC.I2C3Freq_Value=160000000
+RCC.I2C4Freq_Value=160000000
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACCLockSelectionVirtualString,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSIClockRange,MSI_VALUE,OCTOSPIMFreq_Value,PLL1R,PLL2M,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWR_Regulator_Voltage_Scale,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.LPTIM2Freq_Value=160000000
+RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSIDIV_VALUE=32000
 RCC.LSI_VALUE=32000
-RCC.MSI_VALUE=4000000
+RCC.MCO1PinFreq_Value=160000000
+RCC.MDF1Freq_Value=160000000
+RCC.MSIClockRange=RCC_MSIRANGE_0
+RCC.MSI_VALUE=48000000
+RCC.OCTOSPIMFreq_Value=160000000
+RCC.PLL1R=1
+RCC.PLL2M=3
+RCC.PLL2N=20
 RCC.PLL2P=4
-RCC.PLL2PoutputFreq_Value=129000000
-RCC.PLL2QoutputFreq_Value=258000000
-RCC.PLL2RoutputFreq_Value=258000000
-RCC.PLL3PoutputFreq_Value=258000000
-RCC.PLL3QoutputFreq_Value=258000000
-RCC.PLL3RoutputFreq_Value=258000000
-RCC.PLLPoutputFreq_Value=258000000
-RCC.PLLQoutputFreq_Value=258000000
-RCC.PLLRCLKFreq_Value=258000000
+RCC.PLL2PoutputFreq_Value=80000000
+RCC.PLL2QoutputFreq_Value=160000000
+RCC.PLL2RoutputFreq_Value=160000000
+RCC.PLL3PoutputFreq_Value=3096000000
+RCC.PLL3QoutputFreq_Value=3096000000
+RCC.PLL3RoutputFreq_Value=3096000000
+RCC.PLLM=3
+RCC.PLLN=10
+RCC.PLLPoutputFreq_Value=80000000
+RCC.PLLQoutputFreq_Value=80000000
+RCC.PLLRCLKFreq_Value=160000000
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE1
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=129000000
-RCC.SAI2Freq_Value=129000000
-RCC.SDMMCFreq_Value=258000000
+RCC.SAI1Freq_Value=80000000
+RCC.SAI2Freq_Value=80000000
+RCC.SDMMCFreq_Value=80000000
+RCC.SPI1Freq_Value=160000000
+RCC.SPI2Freq_Value=160000000
+RCC.SPI3Freq_Value=160000000
+RCC.SYSCLKFreq_VALUE=160000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART4Freq_Value=160000000
+RCC.UART5Freq_Value=160000000
+RCC.USART1Freq_Value=160000000
+RCC.USART2Freq_Value=160000000
+RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=4000000
-RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=516000000
-RCC.VCOPLL2OutputFreq_Value=516000000
-RCC.VCOPLL3OutputFreq_Value=516000000
+RCC.VCOInput2Freq_Value=16000000
+RCC.VCOInput3Freq_Value=48000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=160000000
+RCC.VCOPLL2OutputFreq_Value=320000000
+RCC.VCOPLL3OutputFreq_Value=6192000000
 SAI1.AudioFrequency-SAI_A_Master=SAI_AUDIO_FREQUENCY_48K
 SAI1.AudioMode-SAI_A_Master=SAI_MODEMASTER_RX
 SAI1.BasicDataSize-SAI_A_Master=SAI_PROTOCOL_DATASIZE_24BIT
 SAI1.ErrorAudioFreq-SAI_A_Master=4.97 %
-SAI1.IPParameters=VirtualProtocol-SAI_A_BASIC,Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MckOutput-SAI_A_Master,InitProtocol-SAI_A_Master,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master,AudioFrequency-SAI_A_Master,BasicDataSize-SAI_A_Master,AudioMode-SAI_A_Master,MonoStereoMode-SAI_A_Master
+SAI1.IPParameters=Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MckOutput-SAI_A_Master,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master,AudioFrequency-SAI_A_Master,AudioMode-SAI_A_Master,MonoStereoMode-SAI_A_Master,InitProtocol-SAI_A_Master,VirtualProtocol-SAI_A_BASIC,BasicDataSize-SAI_A_Master
 SAI1.InitProtocol-SAI_A_Master=Enable
 SAI1.Instance-SAI_A_Master=SAI$Index_Block_A
 SAI1.MckOutput-SAI_A_Master=SAI_MCK_OUTPUT_DISABLE
@@ -184,8 +226,38 @@ SAI1.VirtualMode-SAI_A_Master=VM_MASTER
 SAI1.VirtualProtocol-SAI_A_BASIC=VM_BASIC_PROTOCOL
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=46300
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBuffers=pool0
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationNames=pool0
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationSizes=AI_N4CED_V02_DATA_ACTIVATION_1_SIZE
+STMicroelectronics.X-CUBE-AI.7.1.0.ArtificialOoIntelligenceJjXAaCUBEAaAI_Checked=true
+STMicroelectronics.X-CUBE-AI.7.1.0.HeapSize=0x800
+STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=XAaCUBEAaAICcArtificialOoIntelligenceJjCore,HeapSize,StackSize,ModelName-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelType-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelKind-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelHashList,ModelNameList,WorkingBufferStartAddrList,ModelStructureFile-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelMacc-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelActualCompression-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelRamOccupation-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelFlashOccupation-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ModelCompression-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration
+STMicroelectronics.X-CUBE-AI.7.1.0.InternalRamActivationBufferMaxSize=AI_N4CED_V02_DATA_ACTIVATIONS_SIZE
+STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfInputLayer=1
+STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfOutputLayer=1
+STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfInputLayer=AI_N4CED_V02_IN_1_SIZE_BYTES
+STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfOutputLayer=AI_N4CED_V02_OUT_1_SIZE_BYTES
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=0.0
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelCompression-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=1
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=742236
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelHashList=a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelKind-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=TFLITE
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=5028040
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelName-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=n4ced_v02
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelNameList=n4ced_v02
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=46300
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2\\N4CED_V-0-2_lite.tflite
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelType-a3839d4dfd1a3be76489f947041929f79b5a45c50f3c16e5534fa310360bc950=STM32Cube.AI runtime
+STMicroelectronics.X-CUBE-AI.7.1.0.ReadyForCodeGeneration=true
+STMicroelectronics.X-CUBE-AI.7.1.0.StackSize=0x800
+STMicroelectronics.X-CUBE-AI.7.1.0.WorkingBufferStartAddrList=0xFFFFFFFF
+STMicroelectronics.X-CUBE-AI.7.1.0.XAaCUBEAaAICcArtificialOoIntelligenceJjCore=true
+STMicroelectronics.X-CUBE-AI.7.1.0_SwParameter=XAaCUBEAaAICcArtificialOoIntelligenceJjCore\:true;
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_GPDMA1_VS_GPDMACH15.Mode=LINKEDLIST_GPDMACH15
 VP_GPDMA1_VS_GPDMACH15.Signal=GPDMA1_VS_GPDMACH15
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
@@ -196,6 +268,8 @@ VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
 VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Mode=SAI_A_BASIC
 VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Signal=SAI1_VP_$IpInstance_SAIA_SAI_BASIC
+VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_7.1.0.Mode=ArtificialOoIntelligenceJjXAaCUBEAaAI
+VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_7.1.0.Signal=STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_7.1.0
 VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
