--- a/Code/STM32/L4_embedded_CNN_PoC_V-0-1/L4_embedded_CNN_PoC_V-0-1.ioc
+++ b/Code/STM32/L4_embedded_CNN_PoC_V-0-1/L4_embedded_CNN_PoC_V-0-1.ioc
@@ -1,11 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV256
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV16
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 Dma.Request0=SAI1_A
 Dma.RequestsNb=1
@@ -18,7 +18,8 @@ Dma.SAI1_A.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.SAI1_A.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SAI1_A.0.Priority=DMA_PRIORITY_HIGH
 Dma.SAI1_A.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
+FREERTOS.Events01=hI2s_Evt,Dynamic,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,Events01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -40,12 +41,14 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PC3
-Mcu.Pin10=VP_CRC_VS_CRC
-Mcu.Pin11=VP_FATFS_VS_Generic
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin14=VP_SYS_VS_tim17
-Mcu.Pin15=VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_7.1.0
+Mcu.Pin10=PA8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_CRC_VS_CRC
+Mcu.Pin13=VP_FATFS_VS_Generic
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin15=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
+Mcu.Pin16=VP_SYS_VS_tim17
+Mcu.Pin17=VP_STMicroelectronics.X-CUBE-AI_VS_ArtificialOoIntelligenceJjXAaCUBEAaAI_7.1.0
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -53,8 +56,8 @@ Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB10
-Mcu.Pin9=PB9
-Mcu.PinsNb=16
+Mcu.Pin9=PC7
+Mcu.PinsNb=18
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AI.7.1.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -92,6 +95,10 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Speed
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PB10.Mode=SAI_A_Master
 PB10.Signal=SAI1_SCK_A
 PB9.Mode=SAI_A_Master
@@ -99,6 +106,10 @@ PB9.Signal=SAI1_FS_A
 PC0.Signal=ADCx_IN1
 PC3.Mode=SAI_A_Master
 PC3.Signal=SAI1_SD_A
+PC7.GPIOParameters=GPIO_Speed
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -127,7 +138,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -206,29 +217,29 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSi
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=49708
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=46300
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBuffers=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationNames=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationSizes=AI_NETWORK_DATA_ACTIVATION_1_SIZE
 STMicroelectronics.X-CUBE-AI.7.1.0.ArtificialOoIntelligenceJjXAaCUBEAaAI_Checked=true
 STMicroelectronics.X-CUBE-AI.7.1.0.HeapSize=0x800
-STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=XAaCUBEAaAICcArtificialOoIntelligenceJjCore,HeapSize,StackSize,ModelName-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelType-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelKind-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelHashList,ModelNameList,WorkingBufferStartAddrList,LatestDirectoryUsed-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelStructureFile-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelMacc-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelActualCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelRamOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelFlashOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration
+STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=HeapSize,StackSize,ModelName-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelType-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelKind-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelHashList,ModelNameList,WorkingBufferStartAddrList,LatestDirectoryUsed-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelStructureFile-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelMacc-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelActualCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelRamOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelFlashOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ModelCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,XAaCUBEAaAICcArtificialOoIntelligenceJjCore
 STMicroelectronics.X-CUBE-AI.7.1.0.InternalRamActivationBufferMaxSize=AI_NETWORK_DATA_ACTIVATIONS_SIZE
-STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=C\:\\Users\\J\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2
+STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfOutputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfInputLayer=AI_NETWORK_IN_1_SIZE_BYTES
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfOutputLayer=AI_NETWORK_OUT_1_SIZE_BYTES
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=2.64
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=2.67
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelCompression-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=4
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=306712
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=282460
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelHashList=8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelKind-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=TFLITE
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=5028040
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelName-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=network
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelNameList=network
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=49708
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=C\:\\Users\\J\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2\\N4CED_V-0-2_lite.tflite
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=46300
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2\\N4CED_V-0-2_lite.tflite
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelType-8756bf45d95c8d5ad4c280e6ead7ad80c2c09bfcceebf7f6c182002fefabbdc1=STM32Cube.AI runtime
 STMicroelectronics.X-CUBE-AI.7.1.0.ReadyForCodeGeneration=true
 STMicroelectronics.X-CUBE-AI.7.1.0.StackSize=0x800
