--- a/Code/STM32/Nu_L5_embedded_CNN_PoC_V-0-1/Nu_L5_embedded_CNN_PoC_V-0-1.ioc
+++ b/Code/STM32/Nu_L5_embedded_CNN_PoC_V-0-1/Nu_L5_embedded_CNN_PoC_V-0-1.ioc
@@ -57,8 +57,11 @@ Dma.USART2_TX.2.SyncEnable=DISABLE
 Dma.USART2_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART2_TX.2.SyncRequestNumber=1
 Dma.USART2_TX.2.SyncSignalID=NONE
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configENABLE_FPU,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
+FREERTOS.configMINIMAL_STACK_SIZE=256
+FREERTOS.configTOTAL_HEAP_SIZE=(8192*4)
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -187,7 +190,7 @@ ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ICACHE_Init-ICACHE-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,9-MX_X_CUBE_AI_Init-STMicroelectronics.X-CUBE-AI.7.1.0-false-HAL-false,10-MX_X_CUBE_AI_Process-STMicroelectronics.X-CUBE-AI.7.1.0-false-HAL-false,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ICACHE_Init-ICACHE-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,10-MX_X_CUBE_AI_Init-STMicroelectronics.X-CUBE-AI.7.1.0-false-HAL-false,11-MX_X_CUBE_AI_Process-STMicroelectronics.X-CUBE-AI.7.1.0-false-HAL-false,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
 RCC.ADCFreq_Value=86000000
 RCC.AHBFreq_Value=86000000
@@ -271,7 +274,7 @@ SAI1.MonoStereoMode-SAI_A_Master=SAI_MONOMODE
 SAI1.RealAudioFreq-SAI_A_Master=47.991 KHz
 SAI1.VirtualMode-SAI_A_Master=VM_MASTER
 SAI1.VirtualProtocol-SAI_A_BASIC=VM_BASIC_PROTOCOL
-STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=49708
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=46300
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBuffers=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationNames=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationSizes=AI_N4CED_V02_DATA_ACTIVATION_1_SIZE
@@ -279,22 +282,22 @@ STMicroelectronics.X-CUBE-AI.7.1.0.ApplicationCcDeviceJjApplication=ApplicationT
 STMicroelectronics.X-CUBE-AI.7.1.0.ArtificialOoIntelligenceJjXAaCUBEAaAI_Checked=true
 STMicroelectronics.X-CUBE-AI.7.1.0.DeviceJjApplication_Checked=true
 STMicroelectronics.X-CUBE-AI.7.1.0.HeapSize=0x800
-STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=HeapSize,StackSize,ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelHashList,ModelNameList,WorkingBufferStartAddrList,ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,ApplicationCcDeviceJjApplication,ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a
+STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=HeapSize,StackSize,ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelHashList,ModelNameList,WorkingBufferStartAddrList,ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,ApplicationCcDeviceJjApplication
 STMicroelectronics.X-CUBE-AI.7.1.0.InternalRamActivationBufferMaxSize=AI_N4CED_V02_DATA_ACTIVATIONS_SIZE
 STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfOutputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfInputLayer=AI_N4CED_V02_IN_1_SIZE_BYTES
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfOutputLayer=AI_N4CED_V02_OUT_1_SIZE_BYTES
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=2.64
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=2.66
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=4
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=306724
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=282460
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelHashList=56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=TFLITE
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=5028040
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=n4ced_v02
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelNameList=n4ced_v02
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=49708
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=46300
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\N4CED_V-0-2\\N4CED_V-0-2_lite.tflite
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=STM32Cube.AI runtime
 STMicroelectronics.X-CUBE-AI.7.1.0.ReadyForCodeGeneration=true
