--- a/Code/STM32/Nu_L5_embedded_CNN_PoC_V-0-1/Nu_L5_embedded_CNN_PoC_V-0-1.ioc
+++ b/Code/STM32/Nu_L5_embedded_CNN_PoC_V-0-1/Nu_L5_embedded_CNN_PoC_V-0-1.ioc
@@ -274,7 +274,7 @@ SAI1.MonoStereoMode-SAI_A_Master=SAI_MONOMODE
 SAI1.RealAudioFreq-SAI_A_Master=47.991 KHz
 SAI1.VirtualMode-SAI_A_Master=VM_MASTER
 SAI1.VirtualProtocol-SAI_A_BASIC=VM_BASIC_PROTOCOL
-STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=43424
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=43432
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBuffers=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationNames=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationSizes=AI_CNN_DATA_ACTIVATION_1_SIZE
@@ -284,21 +284,21 @@ STMicroelectronics.X-CUBE-AI.7.1.0.DeviceJjApplication_Checked=true
 STMicroelectronics.X-CUBE-AI.7.1.0.HeapSize=0x800
 STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=HeapSize,StackSize,ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelHashList,ModelNameList,WorkingBufferStartAddrList,ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,ApplicationCcDeviceJjApplication
 STMicroelectronics.X-CUBE-AI.7.1.0.InternalRamActivationBufferMaxSize=AI_CNN_DATA_ACTIVATIONS_SIZE
-STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\sine_model
+STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\esc50_model_v2
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfOutputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfInputLayer=AI_CNN_IN_1_SIZE_BYTES
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfOutputLayer=AI_CNN_OUT_1_SIZE_BYTES
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=2.48
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=4
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=275220
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=275744
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelHashList=56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=TFLITE
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=4150168
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=4150328
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=cnn
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelNameList=cnn
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=43424
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\sine_model\\sine_model_lite.tflite
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=43432
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\esc50_model_v2\\esc50_model_v2_lite.tflite
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=STM32Cube.AI runtime
 STMicroelectronics.X-CUBE-AI.7.1.0.ReadyForCodeGeneration=true
 STMicroelectronics.X-CUBE-AI.7.1.0.StackSize=0x1000
